<resources>
    <string name="app_name">Chatapp</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="i_have_account"> Giriş Yap </string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="lower_create_new_account">Yeni Hesap Oluştur</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="enter_information">Bilgilerinizi giriniz</string>
    <string name="for_register_fill_the_blanks">Üyelik için kullanacağınız bilgileri doldurunuz</string>
    <string name="login_with_account">Hesabınıza giriş yapınız</string>
    <string name="enter_login_info">Giriş bilgilerinizi giriniz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_button">Çıkış yap</string>
    <string name="change_status">Durumunu değiştir</string>
    <string name="change_picture">Resmini değiştir</string>
    <string name="myStatus">Durumum</string>
    <string name="mySettings">Ayarlarım</string>
    <string name="save_the_changes">Değişiklikleri kaydet</string>
    <string name="find_your_friends">Arkadaşlarını bul</string>
    <string name="find_users_people_status">Durum</string>
    <string name="find_users_text">Kullanıcı Adı</string>
    <string name="show_profile_userName">Kullanıcı adını göster</string>
    <string name="show_profile_userStatus">Durumu göster</string>
    <string name="send_friend_req">Arkadaşlık isteği Gönder</string>
    <string name="decline_friend_req">Arkadaşlık isteğini Reddet</string>
    <string name="write_your_message">Mesajınızı yazınız...</string>
    <string name="accept_friend_req">Kabul et</string>
    <string name="decline_req">Reddet</string>
    <string name="message_part">TextView</string>
</resources>