<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/usable_image_for_settings">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:src="@drawable/defaultpic" />

    <TextView
        android:id="@+id/txtMyUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/username"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/myStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMyUserName"
        android:layout_centerInParent="true"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="@string/myStatus"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_picture"
        android:background="@color/color1Button"
        android:textColor="@android:color/white"
        android:layout_above="@id/change_status_button"
        android:layout_marginBottom="30dp"

        />

    <Button
        android:id="@+id/change_status_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/color2Button"
        android:layout_alignParentBottom="true"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />

</RelativeLayout>