<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/profile_behind">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_visit_user_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/defaultpic" />
    
    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/profile_visit_user_image"
        android:text="@string/show_profile_userName"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textViewUserStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/show_profile_userStatus"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@+id/textViewUsername"
        />

    <Button
        android:id="@+id/profile_send_friend_req_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@color/sendButton"
        android:textColor="@android:color/background_light"
        android:text="@string/send_friend_req" />

    <Button
        android:id="@+id/profile_decline_friend_req_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="@color/declineButton"
        android:textColor="@android:color/background_light"
        android:text="@string/decline_friend_req" />


</RelativeLayout>