<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/req_CircleView_Image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/defaultpic" />

        <LinearLayout
            android:layout_width="182dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/req_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/show_profile_userName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/req_profile_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/show_profile_userStatus"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/LayoutForClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/req_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/sendButton"
                    android:text="@string/accept_friend_req"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/req_decline_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/declineButton"
                    android:text="@string/decline_req"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>